// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createEditLink returns an a tag using the item.name and item.selfLink 1`] = `
<a
  href="/resources?apiversion=app.k8s.io%2Fv1beta1&cluster=local-cluster&kind=Application&name=foo&namespace=boo"
>
  foo
</a>
`;

exports[`getClusterCount handles Argo app properties 1`] = `
<a
  className="cluster-count-link"
  href="/search?filters={\\"textsearch\\":\\"name%3Alocal-cluster%2Cui-dev-remote%20kind%3Acluster\\"}"
>
  {0} Remote, 1 Local
</a>
`;

exports[`getClusterCount returns 'None' when there are no remote or local clusters 1`] = `"None"`;

exports[`getClusterCount returns a string that does not include 'local' when localDeployment is false, with link 1`] = `
<a
  className="cluster-count-link"
  href="/search?filters={\\"textsearch\\":\\"name%3Aapp%20namespace%3Athenamespace%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
>
  {0} Remote
</a>
`;

exports[`getClusterCount returns a string that does not include 'remote' when there are no remote clusters, no link 1`] = `"Local"`;

exports[`getClusterCount returns a string that includes both remote and local clusters when applicable, with link 1`] = `
<a
  className="cluster-count-link"
  href="/search?filters={\\"textsearch\\":\\"name%3Aapp%20namespace%3Athenamespace%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
>
  {0} Remote, 1 Local
</a>
`;
